; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/gpio/extr_gpio-latch.c_gpio_latch_unlock.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ar71xx/files/drivers/gpio/extr_gpio-latch.c_gpio_latch_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_latch_chip = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_latch_chip*, i32)* @gpio_latch_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gpio_latch_unlock(%struct.gpio_latch_chip* %0, i32 %1) #0 {
  %3 = alloca %struct.gpio_latch_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.gpio_latch_chip* %0, %struct.gpio_latch_chip** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %3, align 8
  %6 = getelementptr inbounds %struct.gpio_latch_chip, %struct.gpio_latch_chip* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %3, align 8
  %11 = getelementptr inbounds %struct.gpio_latch_chip, %struct.gpio_latch_chip* %10, i32 0, i32 2
  %12 = call i32 @mutex_unlock(i32* %11)
  br label %13

13:                                               ; preds = %9, %2
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %3, align 8
  %18 = getelementptr inbounds %struct.gpio_latch_chip, %struct.gpio_latch_chip* %17, i32 0, i32 0
  store i32 1, i32* %18, align 4
  br label %19

19:                                               ; preds = %16, %13
  %20 = load %struct.gpio_latch_chip*, %struct.gpio_latch_chip** %3, align 8
  %21 = getelementptr inbounds %struct.gpio_latch_chip, %struct.gpio_latch_chip* %20, i32 0, i32 1
  %22 = call i32 @mutex_unlock(i32* %21)
  ret void
}

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
